--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /bin
 /Tracer.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/UserInterfaceState.xcuserstate
 /Tracer.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+/Tracer.xcodeproj/project.xcworkspace/xcshareddata
