--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Tracer.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/UserInterfaceState.xcuserstate
 /Tracer.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 /Tracer.xcodeproj/project.xcworkspace/xcshareddata
+/obj/osx/Release/.compiler_flags
