feat(): project to box surface

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Tracer.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 /Tracer.xcodeproj/project.xcworkspace/xcshareddata
 /obj/osx/Release/.compiler_flags
+/build
